# genai-speech-experiments

./: .prettierrc  Cargo.toml  LICENSE  eslint.config.mjs  flake.nix  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
src/: actions.rs  app_composite.rs  config.rs  lib.rs  logger.rs  main.rs  main.ts  paRecorder.ts  speech.rs
src/actions/: classification.rs  model.rs
src/ai_providers/: openai.rs
src/session/: model.rs
src/speech/: audio.rs  audio_format.rs  input.rs
src/speech/audio/: recorder.rs
src/speech/audio/recorder/: file.rs  pipewire.rs
src/speech/input/: openai.rs
