[package]
name = "jarvis_code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
colored = "3.0.0"
futures-util = "0.3.31"
pipewire = "0.8.0"
reqwest = { version = "0.12.23", features = ["charset", "http2", "json", "rustls-tls", "system-proxy"], default-features = false }
rustls = "0.23.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
